--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/*.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/addSubscriber",
-      "dest": "/api/addSubscriber.js"
+      "src": "/(.*)",
+      "dest": "server.js"
     }
   ]
 }
