--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,26 @@
   ],
   "routes": [
     {
+      "src": "/api/addSubscriber",
+      "dest": "server.js",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, OPTIONS, PUT, PATCH, DELETE"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+        }
+      ]
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
   ]
-  
 }
