--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,13 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/addSubscriber"
+      "src": "/api/addSubscriber",
+      "methods": ["POST"],
+      "dest": "server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "server.js"
     }
   ]
 }
